--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,124 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
-
+# Reproducible Research: Peer Assessment 1
+- **Sheng Yang**
+- July 19 2015
 
 ## Loading and preprocessing the data
-
-
+```{r, echo=TRUE}
+unzip("./activity.zip")
+data <- read.csv("./activity.csv")
+data$date <- as.Date(data$date)
+head(data)
+```
 
 ## What is mean total number of steps taken per day?
+1. Calculate the total number of steps taken per day
+``` {r, echo=TRUE}
+stepsPerDay <- tapply(data$steps, data$date, sum, na.rm = T)
+```
 
 
+2. Make a histogram of the total number of steps taken each day
+``` {r, echo=TRUE}
+library(ggplot2)
+hist(stepsPerDay, breaks = 50, col = "black", xlab = "Steps/Day", ylab = "Count")
+
+```
+
+3. Calculate and report the mean and median of the total number of steps taken per day
+``` {r, echo=TRUE}
+stepsPerDayMean <- mean(stepsPerDay)
+stepsPerDayMedian <- median(stepsPerDay)
+```
+
+- The mean of the total number of steps taken per day is `r stepsPerDayMean`.
+- The median of the total number of steps taken per day is `r stepsPerDayMedian`.
 
 ## What is the average daily activity pattern?
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r, echo=TRUE}
+stepsVSinterval <- aggregate(x = data$steps, by = list(data$interval), FUN = mean, na.rm = T)
+names(stepsVSinterval) <- c("Interval","Steps")
+plot(stepsVSinterval, type = "l", xlab = "Interval", ylab = "average number of steps" )
+```
 
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r, echo=TRUE}
+maxInterval <- stepsVSinterval$Interval[which.max(stepsVSinterval$Steps)]
+```
 
+- The interval that gives the max number of steps is `r maxInterval`.
 
 ## Imputing missing values
+Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
 
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r, echo=TRUE}
+numberofMissingValues <- sum(is.na(data$steps))
+```
+
+- Total number of missing values: `r numberofMissingValues`.
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r,echo=TRUE}
+replaceNA <- function(steps, interval){
+    val <- NA
+    if(!is.na(steps))
+        val <- steps
+    else
+        val <- stepsVSinterval[stepsVSinterval$Interval==interval,"Steps"]
+    return(val)
+}
+
+newData <- data
+newData$steps <- mapply(FUN = replaceNA, newData$steps, newData$interval)
+
+```
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+- Here I use ggplot2.
+
+```{r, echo=TRUE}
+stepsPerDayNew <- tapply(newData$steps, newData$date, sum, na.rm = TRUE)
+
+library(ggplot2)
+qplot(stepsPerDayNew, binwidth = 500, xlab = "Steps/Day (imputed)", ylab = "Count")
+
+stepsPerDayMeanNew <- mean(stepsPerDay)
+stepsPerDayMedianNew <- median(stepsPerDay)
+```
+
+- New mean: `r stepsPerDayMeanNew`.
+- New Median: `r stepsPerDayMedian`.
+These values are different from the estimates from the first part of the assignment. Imputing missing data changes the mean or median of the total daily number of steps.
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
+
+1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+```{r, echo=TRUE}
+weekdayOrWeekend <- function(date){
+    day <- weekdays(date)
+    if (day %in% c("Monday", "Tuesday", "Wednesday","Thursday","Friday"))
+        return("weekday")
+    else if (day %in% c("Saturday","Sunday"))
+        return("weekend")
+    else
+        stop("invalid date")
+}
+newData$day <- mapply(newData$date, FUN = weekdayOrWeekend)
+
+```
+
+
+2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+
+```{r,echo=TRUE}
+stepsVSintervalNew <- aggregate(steps ~ interval + day, data = newData, mean)
+ggplot(stepsVSintervalNew, aes(interval, steps)) + geom_line() + facet_grid(day ~ .) + xlab("Interval") + ylab("average number of steps")
+
+```
+
+
